# vast-2025

./: CLAUDE.md  README.md  fix_remaining_issues.py  main.py  pyproject.toml  test_nadia.py
app/: __init__.py
app/static/css/: daily_patterns.css  graph.css  keyword_analysis.css  nadia_analysis.css  styles.css  time_patterns.css  topic_modeling.css
app/static/js/: daily_patterns.js  graph.js  keyword_analysis.js  nadia_analysis.js  time_patterns.js  topic_modeling.js
app/templates/: base.html  daily_patterns.html  graph.html  index.html  keyword_analysis.html  nadia_analysis.html  time_patterns.html  topic_modeling.html
app/visualizations/: daily_patterns.py  graph.py  keyword_analysis.py  nadia_analysis.py  time_patterns.py  topic_modeling.py
data/: MC3_entity_similarity_matrix.csv  MC3_graph.json  MC3_graph_communication.json  MC3_messages.csv  MC3_persons.csv  MC3_relationships.json
notebooks/: EDA.ipynb  a.csv  data_analysis.ipynb  data_parser_completed.ipynb  question1.ipynb  question3.ipynb
