[project]
name = "vast-challenge3-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.14.0",
    "flask>=3.1.1",
    "hdbscan>=0.8.40",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "umap-learn>=0.5.7",
]
